welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {

def fini():Boolean = {
	if (estDosMur) {
		getDirection();
		if (getDirection()==Direction.NORD) {
			droite();
		}
		if (estFaceMur) {
			return true
		}
		else {
			return false
		}
	}
	else {
		return false
	}
}

while (!fini()) {
var x=0
var y=0
while (!estDosMur) {
	setPos(x+1, y)
}
if (estDosMur) {
	setPos(0, y+1)
}

}
}
